<resources>
    <string name="app_name">Flunk</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_button_text">Map</string>
    <string name="capacityText">10</string>
    <string name="enlistButtonText">Spielfeld anmelden</string>
    <string name="courtLongitudeText">Längengrad</string>
    <string name="courtLatitudeText">Breitengrad</string>
    <string name="lblCap">Max. Spielerzahl</string>
    <string name="lblLat">Breitengrad</string>
    <string name="lblLng">Längengrad</string>
    <string name="msgJoinCourtDialog">Hier mitspielen?</string>
    <string name="btnJoinText">Klar.</string>
    <string name="btnCancelJoinCourt">Jetzt nicht</string>
    <string name="btnLoginText">Login</string>
    <string name="facebook_app_id">254782016175692</string>
    <string name="fb_login_protocol_scheme">fb254782016175692</string>
    <string name="msgNoLocationPermission">Ohne Berechtigung für Ortungsdienste kannst du keine Spielfelder erstellen oder betreten</string>
    <string name="btnLogoutText">Logout</string>
    <string name="msgStubLogout">" erfolgreich abgemeldet"</string>
    <string name="msgStubLogin">"Erfolgreich angemeldet als "</string>
    <string name="descBannerImage">Banner</string>
    <string name="hintCapacity">Maximale Spieleranzahl</string>
    <string name="hintLongitude">Längengrad</string>
    <string name="hintLatitude">Breitengrad</string>
    <string name="msgNotLoggedIn">Um ein Spielfeld zu erstellen musst du angemeldet sein</string>
    <string name="msgLoginFailed">Anmeldung fehlgeschlagen</string>
    <string name="msgNotJoggedInJoin">Melde dich an, um einem Spielfeld beizutreten</string>
    <string name="msgCourtFull">Das Spielfeld ist leider gerade voll belegt</string>
    <string name="msgAlreadyJoined">Du bist hier schon als Spieler angemeldet!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msgLeaveCourtDialog">Spielfeld verlassen?</string>
    <string name="btnLeaveText">Jo!</string>
    <string name="btnCancelLeaveCourt">Noch nicht</string>
</resources>